update index title

--- a/index.html
+++ b/index.html
@@ -3,12 +3,7 @@
   <head>
     <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>
-  File: README
-  
-    &mdash; Documentation by YARD 0.9.26
-  
-</title>
+<title>SPARMAP: a Simple PARallel MAP for Ruby</title>
 
   <link rel="stylesheet" href="css/style.css" type="text/css" />
 
